--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "autoprefixer": "^10.4.13",
     "daisyui": "^2.41.0",
+    "mapbox-gl": "^2.11.0",
     "postcss": "^8.4.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-map-gl": "^7.0.19",
     "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
