--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.13",
     "daisyui": "^2.41.0",
+    "deck.gl": "^8.8.20",
     "mapbox-gl": "^2.11.0",
     "postcss": "^8.4.19",
     "react": "^18.2.0",
