--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.191",
     "autoprefixer": "^10.4.13",
     "daisyui": "^2.41.0",
     "deck.gl": "^8.8.20",
+    "lodash": "^4.17.21",
     "mapbox-gl": "^2.11.0",
     "postcss": "^8.4.19",
     "react": "^18.2.0",
