--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.1",
     "autoprefixer": "^10.4.13",
     "daisyui": "^2.41.0",
     "deck.gl": "^8.8.20",
@@ -17,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.0.19",
+    "react-redux": "^8.0.5",
     "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
